# CS100D2

./: AvgFun.c  AvgNestFun.c  CMakeLists.txt  EvenOdd.c  d1.c  d1c.c  d1ml.c  done  gdb.c  sfl.c  sflc.c
script/: cleanup.sh  init.sh  run  selfDestory  selfDestory.c  selfDestory.sh
